Hopeful fix for matchmaking opponent list on mobile to avoid double scrolling

--- a/src/views/Matchmaking/Matchmaking.styl
+++ b/src/views/Matchmaking/Matchmaking.styl
@@ -161,8 +161,8 @@
 
         +portrait() {
             height: auto;
-            min-height: auto;
-            max-height: auto;
+            min-height: unset;
+            max-height: unset;
         }
     }
 
